# deltaforge

./: .gitignore  main.py  pyproject.toml  requirements.txt
deltaforge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
deltaformat/: DeltaDataframeHelper.py
