[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deltaforge"
version = "1.0.0"
description = "Support common PySpark operations on Delta"
readme = "README.md"
authors = [{ name = "Andrij Demianczuk", email = "andrij.demianczuk@databricks.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Commons License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["delta", "pyspark", "spark"]
dependencies = [
    "pyspark"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest", "bumpver"]

[project.urls]
Homepage = "https://www.databricks.com/"

[project.scripts]
realpython = "reader.__main__:main"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

